# libcaesium

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  config.h  install.sh
.cargo/: config.toml
.github/workflows/: publish_crates.yml  rust.yml  test.yml
caesium/: CMakeLists.txt  caesium.c  caesium.h  config.h.in  cstypes.h  error.c  error.h  jpeg.c  jpeg.h  lodepng.c  png.c  png.h  tiff.c  tiff.h  utils.c  utils.h
demo/: CMakeLists.txt  helper.c  helper.h  main.c
examples/: basic.rs  convert.rs  lossless.rs  resize.rs  size.rs
include/: libcaesium.h
src/: avif.rs  convert.rs  error.rs  gif.rs  heif.rs  interface.rs  jpeg.rs  lib.rs  main.rs  parameters.rs  png.rs  resize.rs  tiff.rs  utils.rs  webp.rs
tests/: avif.rs  cleanup.rs  compress_to_size.rs  convert.rs  gif.rs  heic.rs  integration.rs  jpeg.rs  metadata.rs  png.rs  tiff.rs  webp.rs
tests/samples/: panic.tif  rgb8.tif  uncompressed.heic
