[package]
name = "libcaesium"
version = "0.16.5"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = [
    "compression",
    "jpeg",
    "png",
    "gif",
    "webp"
]
description = "A lossy/lossless image compression library."
readme = "README.md"
exclude = [
    "tests/*",
]
homepage = "https://github.com/Lymphatus/libcaesium"
repository = "https://github.com/Lymphatus/libcaesium"
license = "Apache-2.0"

[features]
default = ["jpg", "png", "webp", "gif", "tiff", "parallel"]
jpg = ["dep:mozjpeg-sys", "image/jpeg"]
png = ["dep:oxipng", "dep:lodepng", "dep:imagequant", "image/png"]
webp = ["dep:webp", "image/webp"]
gif = ["dep:gifsicle", "image/gif"]
tiff = ["image/tiff"]
parallel = ["oxipng?/parallel", "imagequant?/threads", "dssim/threads"]

[dependencies]
mozjpeg-sys = { version = "2.2", optional = true }
oxipng = { version = "9.0", default-features = false, features = ["filetime", "zopfli"], optional = true }
libc = "0.2"
gifsicle = { version = "1.94", optional = true }
webp = { version = "0.3.0", optional = true }
infer = "0.16.0"
image = { version = "0.25.1", default-features = false }
img-parts = "0.3"
bytes = "1.6"
lodepng = { version = "3.10", optional = true }
imagequant = { version = "4.3", optional = true, default-features = false }
tiff = { version = "0.9" }
kamadak-exif = "0.5"

[dev-dependencies]
dssim = { version = "3.3", default-features = false, features = ["no-macos-vimage"] }

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "caesium"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
test = true
doctest = false
bench = false
doc = false
