[package]
name = "libcaesium"
version = "0.20.0"
authors = ["Matteo Paonessa <matteo.paonessa@gmail.com>"]
edition = "2021"
categories = ["multimedia::images"]
keywords = [
    "compression",
    "jpeg",
    "png",
    "gif",
    "webp"
]
description = "A lossy/lossless image compression library."
readme = "README.md"
exclude = [
    "tests/*",
    ".github/*",
    ".idea/*",
]
homepage = "https://github.com/Lymphatus/libcaesium"
repository = "https://github.com/Lymphatus/libcaesium"
license = "Apache-2.0"

[features]
default = ["jpg", "png", "webp", "gif", "tiff", "parallel"]
jpg = ["dep:mozjpeg-sys", "image/jpeg"]
png = ["dep:oxipng", "dep:lodepng", "dep:imagequant", "image/png"]
webp = ["dep:webp", "image/webp"]
gif = ["dep:gifski", "dep:gif", "dep:gif-dispose", "image/gif"]
tiff = ["dep:tiff", "image/tiff"]
parallel = ["oxipng?/parallel", "imagequant?/threads", "dssim/threads"]

[dependencies]
mozjpeg-sys = { version = "=2.2.1", optional = true }
oxipng = { version = "9.0", default-features = false, features = ["filetime", "zopfli"], optional = true }
libc = "0.2"
webp = { version = "0.3.1", optional = true }
infer = "0.19"
image = { version = "0.25", default-features = false }
img-parts = "0.4.0"
bytes = "1.7"
lodepng = { version = "3.10", optional = true }
imagequant = { version = "4.3", optional = true, default-features = false }
tiff = { version = "0.9", optional = true }
kamadak-exif = "0.6"
gifski = { version = "1.34", optional = true }
gif = { version = "0.13", optional = true }
gif-dispose = { version = "5.0", optional = true }

[target.wasm32-unknown-emscripten.dependencies]
libwebp-sys = "=0.9.5"

[dev-dependencies]
dssim = { version = "3.3", default-features = false, features = ["no-macos-vimage"] }

[lib]
name = "caesium"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
test = true
doctest = false
bench = false
doc = false
